@@ -4,7 +4,7 @@
 
 /* GCC 4.1.[01] miscompiles __weak */
 #ifdef __KERNEL__
-# if __GNUC_MINOR__ == 1 && __GNUC_PATCHLEVEL__ <= 1
+# if __GNUC__ == 4 && __GNUC_MINOR__ == 1 && __GNUC_PATCHLEVEL__ <= 1
 #  error Your version of gcc miscompiles the __weak directive
 # endif
 #endif
@@ -20,7 +20,7 @@
  */
 #define uninitialized_var(x) x = x
 
-#if __GNUC_MINOR__ >= 3
+#if __GNUC__ > 4 || __GNUC_MINOR__ >= 3
 /* Mark functions as cold. gcc will assume any path leading to a call
    to them will be unlikely.  This means a lot of manual unlikely()s
    are unnecessary now for any paths leading to the usual suspects
@@ -37,7 +37,7 @@
 #define __cold			__attribute__((__cold__))
 
 
-#if __GNUC_MINOR__ >= 5
+#if __GNUC__ > 4 || __GNUC_MINOR__ >= 5
 /*
  * Mark a position in code as unreachable.  This can be used to
  * suppress control flow warnings after asm blocks that transfer
@@ -56,10 +56,10 @@
 
 #endif
 
-#if __GNUC_MINOR__ > 0
+#if __GNUC__ > 4 || __GNUC_MINOR__ > 0
 #define __compiletime_object_size(obj) __builtin_object_size(obj, 0)
 #endif
-#if __GNUC_MINOR__ >= 4
+#if __GNUC__ > 4 || __GNUC_MINOR__ >= 4
 #define __compiletime_warning(message) __attribute__((warning(message)))
 #define __compiletime_error(message) __attribute__((error(message)))
 #endif
